--- a/BookstoreApplication/BookstoreApplication/appsettings.json
+++ b/BookstoreApplication/BookstoreApplication/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=BookstoreDb;Username=postgres;Password=Dujd2410"
+  }
 }
